ingress/alertmanager-ingress.yaml
#Author: OCC
#Date: 18022021
#Changes: 
#ATT has released DNS 
#Tultitlan: monitoring-prod-alertmanager-tl.mx.att.com
#Sperto: monitoring-prod-alertmanager-qr.mx.att.com

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: alertmanager
  namespace: monitoring
spec:
  rules:
  #- host: monitoring-prod-alertmanager.mx.att.com
  - host: monitoring-prod-alertmanager-tl.mx.att.com
    http:
      paths:
      - backend:
          serviceName: alertmanager
          servicePort: 9093
        path: /
  tls:
  - hosts:
    #- monitoring-prod-alertmanager.mx.att.com
    - monitoring-prod-alertmanager-tl.mx.att.com
    secretName: default-server-secret
