ingress/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: monitoring-prod-grafana.mx.att.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        path: /
  tls:
  - hosts:
    - monitoring-prod-grafana.mx.att.com
    secretName: default-server-secret
