ingress/prometheus-ingress.yaml
#Author: OCC
#Date: 18022021
#Changes: 
#ATT has released DNS 
#Tultitlan: monitoring-prod-prometheus-qr.mx.att.com
#Sperto: monitoring-prod-prometheus-qr.mx.att.com

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  #   ncp/internal_ip_for_policy: 100.64.112.15
  # generation: 1
  name: prometheus
  namespace: monitoring

spec:
  rules:
  #- host: monitoring-prod-prometheus.mx.att.com
  - host: monitoring-prep-prometheus-qr.mx.att.com
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
        path: /
  tls:
  - hosts:
    #- monitoring-prod-prometheus.mx.att.com
    - monitoring-prep-prometheus-qr.mx.att.com
    secretName: default-server-secret
